committing new comments only

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         <a class="btn btn-outline-success" href="https://www.youtube.com/user/kudvenkat/featured" role="button">Kudvenkat</a>
                         <a class="btn btn-outline-success" href="https://www.youtube.com/user/Conutant" role="button">Tyler Moore</a>
                     </p>
-                </div>
+                </div><!--Card containing listing of links of learning resources-->
 
                 <div class="card-deck">
                     <div class="card">
@@ -208,7 +208,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div><!--Card Body containing listing of learning resources and prev. edu-->
 
             <div class="card card-body py-5">
                 <h3>Previous Opportunities</h3>
@@ -229,7 +229,7 @@
                         <div class="card-footer">
                             <h6 class="text-muted">Dates: 2017-2017</h6>
                         </div>
-                    </div>
+                    </div><!--Card 1-->
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">MCE</h4>
@@ -245,7 +245,7 @@
                         <div class="card-footer">
                             <h6 class="text-muted">Dates: 2016-2017</h6>
                         </div>
-                    </div>
+                    </div><!--Card 2-->
                     <div class="card">
                         <div class="card-body">
                             <h4 class="card-title">Greenberg Dental</h4>
@@ -261,12 +261,12 @@
                         <div class="card-footer">
                             <h6 class="text-muted">Dates: 2014-2015</h6>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+                    </div><!--Card 3-->
+                </div><!--Card Deck-->
+            </div><!--Card body for Previous Opportunities Section-->
+        </div><!--Collapses EDU/Resume Section-->
 
-        <!--Works-->
+        <!--Works/Portfolio/Graphic Arts Page-->
         <div id="work" class="collapse">
             <div class="card card-body bg-orange text-white py-5">
                 <h2>My Portfolio</h2>
@@ -602,7 +602,7 @@
             </div>
         </div>
 
-        <!--Contact-->
+        <!--Contact Page-->
         <div id="contact" class="collapse">
             <div class="card card-body bg-pink text-white py-5">
                 <h2>Reach Out</h2>
