Update to Profile and Index file

--- a/index.html
+++ b/index.html
@@ -127,144 +127,25 @@
 
         <!--Edu & Resume-->
         <div id="eduResume" class="collapse">
-            <div class="card card-body bg-success text-white py-5">
-                <h2>My Education & Resume</h2>
-                <p class="lead">A bit of my history for you to peruse (and yes, I'm a word nerd).
-                    <br> If it weren't for the following resources, I wouldn't know all that I do today (which means I wouldn't
-                    have been able to create any of this cool stuff ;)</p>
-            </div>
-
-            <div class="card card-body py-5">
-                <h3>Where I've Learned</h3>
-                <p>In addition to the more formal educational institutions listed below, I've been fortunate enough to have
-                    been enlightened to the existence of the following educational providers. Thank you all!
-                </p>
-
-                <div class="card">
-                    <p class="p-2 m-2 text-center">
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/user/TechGuyWeb" role="button">Traversy Media</a>
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/channel/UCEQXp_fcqwPcqrzNtWJ1w9w" role="button">Logos By Nick</a>
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/user/LearnWebCode" role="button">Learn Web Code</a>
-                    </p>
-                    <p class="p-2 mb-1 text-center">
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/channel/UC-JQzTHQrVA8j-tamvy66fw" role="button">EJ Media</a>
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/user/kudvenkat/featured" role="button">Kudvenkat</a>
-                        <a class="btn btn-outline-success" href="https://www.youtube.com/user/Conutant" role="button">Tyler Moore</a>
-                    </p>
-                </div><!--Card containing listing of links of learning resources-->
-
-                <div class="card-deck">
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="https://flatironschool.com/">Flatiron School</a>
-                            </h4>
-                            <p class="card-text">Check them out, their doing some great things.</p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Degree: N/A
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Online
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2017-2017</h6>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="http://www.erwin.edu/">Erwin Technical College</a>
-                            </h4>
-                            <p class="card-text">I received a comprehensive well-rounded education and became employed quickly because of their
-                                program.
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Degree: Technical Drafting Certification
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Tampa, FL
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2015-2017</h6>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="https://www.hccfl.edu/">HCC</a>
-                            </h4>
-                            <p class="card-text">Tampa's local community college.</p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Degree: A.A. in Liberal Arts
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Tampa, FL
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2009-2012</h6>
-                        </div>
-                    </div>
+                <div class="card card-body bg-success text-white py-5">
+                    <h2>Where I've Learned</h2>
+                    <p class="lead">Below are all of the resources I've discovered and use to learn about Computer Science (Programming languages, MarkUp Languages, Windows Command Line, Git and GitHub, text editors, graphics, photography...</p>
                 </div>
-            </div><!--Card Body containing listing of learning resources and prev. edu-->
-
-            <div class="card card-body py-5">
-                <h3>Previous Opportunities</h3>
-                <p>I label my previous employers in this manner because that is exactly what they were - opportunities.</p>
-                <div class="card-deck">
+                <div class="card card-body py-5">
                     <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">UMA</h4>
-                            <p class="card-text">Advised recent graduates about career opportunities in their respective areas and assisted them
-                                with their career search in general.</p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Position: Career Advisor
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Tampa, FL
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2017-2017</h6>
-                        </div>
-                    </div><!--Card 1-->
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">MCE</h4>
-                            <p class="card-text">Created 3D models of structual engineering components used in the construction of residential
-                                and commercial buildings.</p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Position: Structural Engineering 3D Modeler
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Tampa, FL
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2016-2017</h6>
-                        </div>
-                    </div><!--Card 2-->
-                    <div class="card">
-                        <div class="card-body">
-                            <h4 class="card-title">Greenberg Dental</h4>
-                            <p class="card-text">Provided new and existing patients with information about the different orthodontic treatment
-                                plans and prices.</p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Position: Orthodontic Treatment Consultant
-                            </p>
-                            <p class="p-2 mb-3 bg-dark text-white">
-                                Location: Tampa, FL
-                            </p>
-                        </div>
-                        <div class="card-footer">
-                            <h6 class="text-muted">Dates: 2014-2015</h6>
-                        </div>
-                    </div><!--Card 3-->
-                </div><!--Card Deck-->
-            </div><!--Card body for Previous Opportunities Section-->
-        </div><!--Collapses EDU/Resume Section-->
+                        <p class="p-2 m-2 text-center">
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/user/TechGuyWeb" role="button">Traversy Media</a>
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/channel/UCEQXp_fcqwPcqrzNtWJ1w9w" role="button">Logos By Nick</a>
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/user/LearnWebCode" role="button">Learn Web Code</a>
+                        </p>
+                        <p class="p-2 mb-1 text-center">
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/channel/UC-JQzTHQrVA8j-tamvy66fw" role="button">EJ Media</a>
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/user/kudvenkat/featured" role="button">Kudvenkat</a>
+                            <a class="btn btn-outline-success" href="https://www.youtube.com/user/Conutant" role="button">Tyler Moore</a>
+                        </p>
+                    </div><!--END of Card containing listing of links of learning resources-->
+                </div><!-- END of Card Body containing listing of learning resources-->
+            </div><!--END of Collapsable EDU/Resume Section-->
 
         <!--Works/Portfolio/Graphic Arts Page-->
         <div id="work" class="collapse">
